k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: <ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/ecommerce-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
